--- a/style.css
+++ b/style.css
@@ -3,24 +3,28 @@ body {
 }
 
 #title {
+    display: flex;
+    justify-content: center;
     font-size: 100px;
     color: orange;
     text-shadow: 2px 2px black;
-    text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 #picture {
-    display: block;
+    display: flex;
+    justify-content: center;
     margin-left: auto;
     margin-right: auto;
     border-radius: 20%;
+    
 }
 
 .sectionHeadings {
+    display: flex;
+    justify-content: center;
     color: orange;
     text-shadow: 1px 1px black;
-    text-align: center;
     font-size: 25px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -38,6 +42,8 @@ body {
     margin-left: 35px;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 200%;
+    display: flex;
+    justify-content: center;
 }
 
 ol > li::marker {
@@ -48,6 +54,24 @@ ol > li::marker {
 .subheading {
     font-size: 28px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    line-height: 10
-    %;
+    line-height: 10%;
+}
+
+.ingredientsSubtitles {
+    width: 600px;
+}
+
+.instructions {
+    margin-left: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 200%;
+}
+
+.bottom-link {
+    margin-left: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 200%;
+    font-weight: bolder;
+    display: flex;
+    justify-content: center;
 }
